--- a/server/public/index.html
+++ b/server/public/index.html
@@ -64,7 +64,7 @@
               <td>{{$value.net}}</td>
               <td>{{$value.platform}}</td>
               <td>{{$value.availWidth}}*{{$value.availHeight}}</td>
-              <td><a href="session.html">回放</a> <a href="session.html">分析</a></td>
+              <td><a href="session.html#{{$value.guid}}">回放</a> <a href="session.html#{{$value.guid}}">分析</a></td>
             </tr>
          {{/each}}
 	</script>
