--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">OWL-移动端用户交互行为平台</a>
+          <a class="navbar-brand" href="index.html">OWL-移动端用户交互行为平台</a>
         </div>
       </div>
     </nav>
