--- a/server/public/task.html
+++ b/server/public/task.html
@@ -33,8 +33,7 @@
               <thead>
                 <tr>
                   <th>最后执行时间</th>
-                  <th>日志条数</th>
-                  <th>已入库条数</th>
+                  <th>日志入库率</th>
                   <th>session数据量</th>
                   <th>action数据量</th>
                   <th>操作</th>
@@ -54,8 +53,7 @@
   	<script id="dataTpl" type="text/html">
         	<tr>
               <td>{{$data.lastTime}}</td>
-              <td>{{$data.logLength}}</td>
-              <td>{{$data.logStor}}</td>
+              <td>{{$data.lastSize}}/{{$data.logsize}}</td>
               <td>{{$data.sessionLength}}</td>
               <td>{{$data.actionLength}}</td>
               <td><a class="runBtn btn btn-default btn-sm" onclick="task.runTask()" href="javascript:;">手动入库</a><span style="display:none" class="runHit">执行中...</span></td>
