--- a/server/public/index.html
+++ b/server/public/index.html
@@ -62,8 +62,8 @@
               <td>{{$value.query}}</td>
               <td>{{$value.time}}</td>
               <td>{{$value.net}}</td>
-              <td>{{$value.net}}</td>
-              <td>{{$value.platform}}</td>
+              <td>{{$value.broswer}}</td>
+              <td>{{$value.os}}</td>
               <td>{{$value.availWidth}}*{{$value.availHeight}}</td>
               <td><a class="btn btn-default btn-sm" href="session.html#{{$value.guid}}">回放</a> <a class="btn btn-default btn-sm" href="map.html#{{$value.guid}}">分析</a></td>
             </tr>
