--- a/server/public/task.html
+++ b/server/public/task.html
@@ -83,7 +83,7 @@
 			$('.runBtn').hide();
 			$('.runHit').show();
 			$.getJSON('http://182.254.209.32:9998/?method=runTask',function(json){
-				
+				alert(json.msg)
 			});
 		}
 
