--- a/server/public/session.html
+++ b/server/public/session.html
@@ -26,7 +26,7 @@
         .snap-scroll{width:375px;height: 667px;overflow: hidden;z-index: 99;position: absolute;}
         .panel-body{text-align: center;}
         .device-tools{font-size:18px;}
-        .device-tools span{margin-left:10px;cursor: pointer;}
+        .device-tools span{margin-left:20px;cursor: pointer;}
     </style>
   </head>
   <body>
@@ -73,19 +73,33 @@
         <div class="col-sm-3">
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">控制面板</h3>
+              <h3 class="panel-title">播放进度</h3>
             </div>
             <div class="panel-body">
-              <div class="device-tools">
-                <span class="glyphicon glyphicon-chevron-left" id="pre"></span>
-                <span class="glyphicon glyphicon-play" id="play" ></span>
-                <span style="display:none" class="glyphicon glyphicon-stop" id="stop"></span>
-                <span class="glyphicon glyphicon-chevron-right" id="next"></span>
-                <span class="glyphicon glyphicon-volume-off"></span>
+              <div class="device-progress">
+                <div class="progress">
+				  <div id="progressBar" class="progress-bar" role="progressbar" style="width:0%;">0%</div>
+				</div>
               </div>
             </div>
           </div>
         </div>
+        <div class="col-sm-3">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">播放控制</h3>
+            </div>
+            <div class="panel-body">
+              <div class="device-tools">
+                <span class="glyphicon glyphicon-backward" id="pre"></span>
+                <span class="glyphicon glyphicon-play" id="play" ></span>
+                <span style="display:none" class="glyphicon glyphicon-stop" id="stop"></span>
+                <span class="glyphicon glyphicon-forward" id="next"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         </div>
       </div>
     </div>
@@ -127,7 +141,12 @@
 				me.hit.set({x:70,y:220})
 				me.stage.addChild(me.hit,me.pointer);
 				me.stage.update();
-				me.getAction();
+				if(!me.actionList.length){
+					me.getAction();
+				}else{
+					me.parseFirstAction();
+				}
+				
 			};
    			img.src = "img/point.png";
    			createjs.Ticker.setFPS(100);
@@ -176,6 +195,7 @@
 		//将字符串解析为数组
 		parseActions : function(actionsStr){
 			var me  = this;
+
 			var actionsArr =  actionsStr.split('!');
 			var newActionArr = [];
 			$.each(actionsArr,function(i,item){
@@ -231,16 +251,31 @@
 	    		me.status = 'stop';
 	    		$('#play').show();
 				$('#stop').hide();
+				alert('播放结束！')
+				me.progress(true);
 	    		return;
 	    	}
 	    	me.playActionUnit(action);
 	    },
 
+	    progress : function(clear){
+	    	var me = this;
+	    	if(clear){
+	    		$('#progressBar').css({width:'0%'});
+	    		$('#progressBar').html('0%');
+	    		return;
+	    	}
+	    	var allNum = me.actionList.length;
+	    	var currentNum  = me.currentAction+1;
+	    	var progress = Math.floor(currentNum*100/allNum);
+	    	$('#progressBar').css({width:progress+'%'});
+	    	$('#progressBar').html(progress+'%');
+	    },
 
 	    //还原单个行为
 	    playActionUnit : function(action){
 	    	var me  = this;
-	    	console.log(action)
+	    	me.progress();
 	    	actionType = action[0];
 	    	var snap = $('.snap-box')[0];
 	    	switch(actionType){
