--- a/server/public/experiment.html
+++ b/server/public/experiment.html
@@ -32,19 +32,27 @@
             <table class="table table-striped">
               <thead>
                 <tr>
-                 <th>query</th>
-                  <th>Baiduid</th>
-                  <th>访问时间</th>
-                  <th>行为时长</th>
-                  <th>网络</th>
-                  <th>浏览器</th>
-                  <th>平台</th>
-                  <th>分辨率</th>
+                  <th>实验id</th>
+                  <th>实验名称</th>
+                  <th>创建人</th>
+                  <th>创建时间</th>
+                  <th>监控时间</th>
+                  <th>抽样率</th>
+                  <th>状态</th>
                   <th>操作</th>
                 </tr>
               </thead>
               <tbody id="sesionListDataBox">
-               	
+               	<tr>
+               		<td>1</td>
+					<td>wise结果页用户行为实验</td>
+					<td>xiaoguang01</td>
+					<td>2015/2/13</td>
+					<td>2015/2/13-2015/3/13</td>
+					<td>5%</td>
+					<td>运行中</td>
+					<td><a class="btn btn-default btn-sm" href="session.html#{{$value.guid}}">查看</a></td>
+               	</tr>
               </tbody>
             </table>
           </div>
@@ -52,50 +60,7 @@
       </div>
     </div>
   </body>
-
-
-  	<script id="sessionListTpl" type="text/html">
-  		{{each list}}
-        	<tr>
-        	  <td>{{$value.query}}</td>
-              <td><a href="">{{$value.ip}}</a></td>
-              <td>{{$value.time}}</td>
-              
-              <td>{{$value.time}}</td>
-              <td>{{$value.net | itemFormat:'nettype'}}</td>
-              <td>{{$value.broswer}}</td>
-              <td>{{$value.os}}</td>
-              <td>{{$value.availWidth}}*{{$value.availHeight}}</td>
-              <td><a class="btn btn-default btn-sm" href="session.html#{{$value.guid}}">回放</a> <a class="btn btn-default btn-sm" href="map.html#{{$value.guid}}">分析</a></td>
-            </tr>
-         {{/each}}
-	</script>
-
    <script src="js/jquery-1.11.2.js"></script>
    <script src="js/conf.js"></script>
    <script src="js/template.js"></script>
-   <script>
-	var index = {
-		init : function(){
-			var me = this;
-			me.bindEvent();
-			me.getSessionList();
-		},
-		bindEvent : function(){
-		},
-		//获取actions数据
-		getSessionList : function(){
-			var me = this;
-			$.getJSON('http://182.254.209.32:9998/?method=getSessionList',function(json){
-				var data = {
-					list : json
-				}
-				var sessionListHtml = template('sessionListTpl', data);
-				$('#sesionListDataBox').html(sessionListHtml);
-			});
-		}
-
-	}
-	index.init();
-	</script>
 </html>
