--- a/server/public/demo/index.html
+++ b/server/public/demo/index.html
@@ -11,6 +11,20 @@
   </style>
   <script src="static/zepto.js"></script>
   <script src="static/scrollTo.js"></script>
+  <script>
+    var OWLSTATIC = {
+      'logid' : '3333',
+      'query' : '测试',
+      'ip' : '222',
+      'Baiduid' : 'BAIDUID=F1D83E8BFC6F19CA31552B68A5D3DBC0:FG=1;',
+      'format' : 'iphone',
+      'pn' : '20',
+      'rn' : '20',
+      'os' : 'iphone',
+      'net' : '1',
+      'broswer' : 'UC'
+    };
+  </script>
  </head> 
  <body> 
   <div id="page">
