--- a/server/public/task.html
+++ b/server/public/task.html
@@ -20,10 +20,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li><a href="index.html">单用户行为分析</a></li>
-            <li><a href="#">多用户行为分析</a></li>
-            <li class="active"><a href="task.html">数据任务状态</a></li>
+           <ul class="nav nav-sidebar">
+            <li><a href="index.html">实验管理</a></li>
+            <li class="active"><a href="task.html">数据管理</a></li>
+            <li><a href="#">用户管理</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -52,7 +52,7 @@
               <td>{{$data.lastTime}}</td>
               <td>{{$data.lastSize}}/{{$data.logsize}}</td>
               <td>{{$data.sessionLength}}</td>
-              <td><a class="runBtn btn btn-default btn-sm" onclick="task.runTask()" href="javascript:;">手动入库</a><span style="display:none" class="runHit">执行中...</span></td>
+              <td><a class="runBtn btn btn-danger btn-xs" onclick="task.runTask()" href="javascript:;">手动入库</a><span style="display:none" class="runHit">执行中...</span></td>
             </tr>
 	</script>
 
