--- a/server/public/single.html
+++ b/server/public/single.html
@@ -93,7 +93,7 @@
               <td>{{$value.broswer}}</td>
               <td>{{$value.os}}</td>
               <td>{{$value.availWidth}}*{{$value.availHeight}}</td>
-              <td><a class="btn btn-primary btn-xs" href="play.html#{{$value.guid}}">回放</a> <a class="btn btn-primary btn-xs" href="map.html#{{$value.guid}}@{{$value.availWidth}}@{{$value.availHeight}}">分析</a></td>
+              <td><a class="btn btn-primary btn-xs" target='_blank' href="play.html#{{$value.guid}}">回放</a> <a class="btn btn-primary btn-xs" target='_blank' href="map.html#{{$value.guid}}@{{$value.availWidth}}@{{$value.availHeight}}">分析</a></td>
             </tr>
          {{/each}}
 	</script>
